route-53-archieve/longhorn-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: longhorn-vs
  namespace: longhorn-system
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'longhorns.sosotech.io'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: longhorn-frontend
        port:
          number: 80
