route-53-archieve/nginx-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: longhorn-vs
  namespace: nginx
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'nginx.globalwealthorder.com'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx
        port:
          number: 80
